--- a/forex-service/src/main/resources/application.conf
+++ b/forex-service/src/main/resources/application.conf
@@ -5,3 +5,9 @@ akka {
 spray.can.server {
   request-timeout = 3s
 }
+
+# check the reference.conf in /spray-servlet/main/resources for all defined settings
+spray.servlet {
+  boot-class = "com.github.icha024.Boot"
+  request-timeout = 6s
+}
