--- a/forex-service/pom.xml
+++ b/forex-service/pom.xml
@@ -72,47 +72,7 @@
 			</resource>
 		</resources>
 		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.5.1</version>
-				<configuration>
-					<sources>
-						<source>src/main/scala</source>
-					</sources>
-				</configuration>
-			</plugin>
-
-
-			<!--<plugin>-->
-				<!--<groupId>org.apache.maven.plugins</groupId>-->
-				<!--<artifactId>maven-assembly-plugin</artifactId>-->
-				<!--<version>2.4</version>-->
-				<!--<configuration>-->
-					<!--<descriptor>src/assembly/bin.xml</descriptor>-->
-					<!--<finalName>apache-maven-cookbook-${pom.version}</finalName>-->
-					<!--&lt;!&ndash;<descriptorRefs>&ndash;&gt;-->
-						<!--&lt;!&ndash;<descriptorRef>jar-with-dependencies</descriptorRef>&ndash;&gt;-->
-						<!--&lt;!&ndash;<descriptorRef>bin</descriptorRef>&ndash;&gt;-->
-					<!--&lt;!&ndash;</descriptorRefs>&ndash;&gt;-->
-					<!--&lt;!&ndash;<archive>&ndash;&gt;-->
-						<!--&lt;!&ndash;<manifest>&ndash;&gt;-->
-							<!--&lt;!&ndash;<mainClass>com.github.icha024.Boot</mainClass>&ndash;&gt;-->
-						<!--&lt;!&ndash;</manifest>&ndash;&gt;-->
-					<!--&lt;!&ndash;</archive>&ndash;&gt;-->
-				<!--</configuration>-->
-				<!--<executions>-->
-					<!--<execution>-->
-						<!--<phase>package</phase>-->
-						<!--<goals>-->
-							<!--<goal>single</goal>-->
-						<!--</goals>-->
-					<!--</execution>-->
-				<!--</executions>-->
-			<!--</plugin>-->
-
-
-
+			<!-- Compile Scala -->
 			<plugin>
 				<groupId>net.alchim31.maven</groupId>
 				<artifactId>scala-maven-plugin</artifactId>
@@ -129,11 +89,11 @@
 					<jvmArgs>
 						<jvmArg>-Xms64m</jvmArg>
 						<jvmArg>-Xmx1024m</jvmArg>
-						<!--<arg>-explaintypes</arg>-->
 					</jvmArgs>
 				</configuration>
 			</plugin>
 
+			<!-- Put artifact + dependencies in 'appassemble' directory and generate start script -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>appassembler-maven-plugin</artifactId>
@@ -158,6 +118,7 @@
 				</executions>
 			</plugin>
 
+			<!-- Bundle everything in a 'distZip' format -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
@@ -177,66 +138,5 @@
 
 		</plugins>
 	</build>
-
-
-
-
-	<!--<build>-->
-		<!--<plugins>-->
-			<!--<plugin>-->
-				<!--<groupId>org.scala-tools</groupId>-->
-				<!--<artifactId>maven-scala-plugin</artifactId>-->
-				<!--<executions>-->
-					<!--<execution>-->
-						<!--<goals>-->
-							<!--<goal>compile</goal>-->
-							<!--<goal>testCompile</goal>-->
-						<!--</goals>-->
-					<!--</execution>-->
-				<!--</executions>-->
-				<!--<configuration>-->
-					<!--<sourceDir>src/main/scala</sourceDir>-->
-					<!--<jvmArgs>-->
-						<!--<jvmArg>-Xms64m</jvmArg>-->
-						<!--<jvmArg>-Xmx1024m</jvmArg>-->
-					<!--</jvmArgs>-->
-				<!--</configuration>-->
-			<!--</plugin>-->
-		<!--</plugins>-->
-	<!--</build>-->
-	<!--<build>-->
-		<!--<sourceDirectory>src/main/scala</sourceDirectory>-->
-		<!--<testSourceDirectory>src/test/scala</testSourceDirectory>-->
-		<!--<plugins>-->
-			<!--<plugin>-->
-				<!--<groupId>net.alchim31.maven</groupId>-->
-				<!--<artifactId>scala-maven-plugin</artifactId>-->
-				<!--<version>3.0.1</version>-->
-			<!--</plugin>-->
-			<!--<plugin>-->
-				<!--<artifactId>maven-assembly-plugin</artifactId>-->
-				<!--<version>2.3</version>-->
-				<!--<configuration>-->
-					<!--<archive>-->
-						<!--<manifest>-->
-							<!--<mainClass>com.github.icha024.Boot</mainClass>-->
-						<!--</manifest>-->
-					<!--</archive>-->
-					<!--<descriptorRefs>-->
-						<!--<descriptorRef>jar-with-dependencies</descriptorRef>-->
-					<!--</descriptorRefs>-->
-				<!--</configuration>-->
-				<!--<executions>-->
-					<!--<execution>-->
-						<!--<id>make-assembly</id>-->
-						<!--<phase>package</phase>-->
-						<!--<goals>-->
-							<!--<goal>single</goal>-->
-						<!--</goals>-->
-					<!--</execution>-->
-				<!--</executions>-->
-			<!--</plugin>-->
-		<!--</plugins>-->
-	<!--</build>-->
 </project>
 
