--- a/spray-template/pom.xml
+++ b/spray-template/pom.xml
@@ -69,6 +69,11 @@
 			<artifactId>spray-client_2.11</artifactId>
 			<version>${spray.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.6.2</version>
+		</dependency>
 	</dependencies>
 	<!--<pluginRepositories>-->
 		<!--<pluginRepository>-->
